--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: fake-access-key
           AWS_SECRET_ACCESS_KEY: fake-secret-key
-          AWS_DEFAULT_REGION: ap-northeast-2
+          AWS_DEFAULT_REGION: ap-southeast-1
         run: make test
